--- a/requirements.in
+++ b/requirements.in
@@ -8,8 +8,7 @@ jsl
 # there's a regression in mod_wsgi 4.5.4:
 # https://github.com/GrahamDumpleton/mod_wsgi/issues/147
 # install httpd-devel in order to have apxs command, otherwise build fails
-mod_wsgi!=4.5.4
-psycopg2>=2.7
+psycopg2-binary>=2.7
 # in order for pyjwt to be able to use RS256 we need pycrypto
 cryptography
 pyjwt>=1.6.1
@@ -17,11 +16,10 @@ requests-futures
 Flask-Cache
 semantic_version
 py_lru_cache
-radon==3.0.1
 pygithub
-codecov
 lxml
 gitpython
 raven[flask]
 pydantic
 tenacity
+gunicorn
