--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -151,6 +151,8 @@ objects:
   metadata:
     name: bayesian-api
   spec:
+    port:
+      targetPort: "32000"
     host: ${BAYESIAN_API_HOSTNAME}
     to:
       kind: Service
